Fix build error (#529)
Co-authored-by: sahil.dileep <sahil.dileep@beehyv.com>